@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.5 2007-10-11 16:29:45 castaglia Exp $ -->
+<!-- $Id: index.html,v 1.6 2007-10-11 17:02:15 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/contrib/index.html,v $ -->
 
 <html>
@@ -118,6 +118,13 @@ distribution.
   </dd>
 
   <p>
+  <dt>The <a href="mod_unique_id.html"><code>mod_unique_id</code> module
+  <dd>Creates a unique ID for every FTP session, which can be used in log
+      files and database tables for tracking all activity associated with
+      a given FTP session
+  </dd>
+
+  <p>
   <dt>The <a href="mod_wrap.html"><code>mod_wrap</code></a> module
   <dd>Supports using the <code>/etc/hosts.allow</code> and
       <code>/etc/hosts.deny</code> files, or other allow/deny files,
@@ -163,7 +170,7 @@ all of the directives to see everything that ProFTPD is capable of supporting.
 
 <p>
 <hr>
-Last Updated: <i>$Date: 2007-10-11 16:29:45 $</i><br>
+Last Updated: <i>$Date: 2007-10-11 17:02:15 $</i><br>
 <hr>
 
 </body>
